# Borderless

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
cmake/: CompilerWarnings.cmake
src/: RCa18576  main.cpp  resource.h  resource.rc
